--- a/teacher.html
+++ b/teacher.html
@@ -36,19 +36,19 @@
               <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
               <h3>Mixvasik</h3>
               <p>№1</p>
-              <button>info</button>
+              <button><a href="mixvas.html">Подробнее</a></button>
             </div>
             <div class="card">
                 <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
                 <h3>vv</h3>
                 <p>eeeeeeee</p>
-                <button>info</button>
+                <button><a href="viktvikt.html">Подробнее</a></button>
               </div>
               <div class="card">
                 <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
                 <h3>Veronichka</h3>
                 <p>exbntkm utjuhhabb</p>
-                <button>info</button>
+                <button><a href="verpav.html">Подробнее</a></button>
               </div>
     </div>   
 </body>
