отчаяние,грусть,тильт и депрессия

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МОУ СШ №123</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
@@ -104,43 +104,16 @@
             <input type="submit">
         </div>
     </div>
-    <div class="all">
-        <input checked type="radio" name="respond" id="desktop">
-            <article id="slider">
-                <input checked type="radio" name="slider" id="switch1">
-                <input  type="radio" name="slider" id="switch2">
-                <input  type="radio" name="slider" id="switch3">
-                <input  type="radio" name="slider" id="switch4">
-                <input  type="radio" name="slider" id="switch5">
-                <div id="slider">
-                    <div id="owerflow">
-                        <div class="image">
-                            <article><img src="https://s1.bloknot-volgograd.ru/thumb/850x0xcut/upload/iblock/4e8/w349my61uy2hmpqiu5ctg5amxjmqqv40/Snimok-ekrana-2023_09_01-v-22.24.06.png"></article>
-                            <article><img src="https://avatars.mds.yandex.net/i?id=d5b07d3090608376924cfed4bb49a9c6f27738a4-10814639-images-thumbs&n=13"></article>
-                            <article><img src="https://avatars.mds.yandex.net/i?id=2c95d162e223ad7b978a611762de46fd5cc9127c-10414364-images-thumbs&n=13"></article>
-                            <article><img src="https://avatars.mds.yandex.net/i?id=36e88cf60dfe94a73afff2f8f8e19ee7b01b2b41-12495681-images-thumbs&n=13"></article>
-                            <article><img src="https://avatars.mds.yandex.net/i?id=478f4a8d470b96cadfd0e50fd7f426ca3f39e62f3f053392-12473016-images-thumbs&n=13"></article>
-                        </div>
-                    </div>
-                </div>
-                <div id="cotrols">
-                    <label for="switch1"></label>
-                    <label for="switch2"></label>
-                    <label for="switch3"></label>
-                    <label for="switch4"></label>
-                    <label for="switch5"></label>
-                </div>
-
-                <div id="active">
-                    <label for="switch1"></label>
-                    <label for="switch2"></label>
-                    <label for="switch3"></label>
-                    <label for="switch4"></label>
-                    <label for="switch5"></label>
-                </div>
-            </article>
+    <div id="slider">
+        <div id="items">
+            <img src="https://s.0532.ua/section/newsIcon/upload/images/news/icon/000/034/596/1-0130_5b194acf04f1f.jpg" />
+            <img src="https://images.prismic.io/zalando-jobsite/95a8794954c6b36dc6cf6c9f5a9994be7f47575d_stocksnap_6yechnhrsw.jpg?auto=compress,format" />
+            <img src="https://mp3party.net/system/boxes/imgs/000/000/369/large/large_thumb-wz2opf.png" />
+            <img src="https://sfera.az/file/pic/xeber/2019-09/1569402140_1546350277_hava-yagmursuz.jpg" />
+        </div>
     </div>
-               
+    <button id="prev">Назад</button>
+    <button id="next">Вперед</button>         
  </body>
   </html>
 
