--- a/exams.html
+++ b/exams.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МОУ СШ №123</title>
-    <link rel="stylesheet" href="/css88/main_88.css" href="/css88/main_5.css">
+    <link rel="stylesheet" href="./css88/main_88.css" href="./css88/main_5.css">
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
