--- a/mixvas.html
+++ b/mixvas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МОУ СШ №123</title>
-    <link rel="stylesheet" href="/css8/main_888.css" href="/css8/main_10.css">
+    <link rel="stylesheet" href="./css8/main_888.css" href="./css8/main_10.css">
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
