грусть, отчаяние, депресия и тильт

--- a/job.html
+++ b/job.html
@@ -89,5 +89,12 @@
             <img src="https://123.volgogradschool.ru/upload/volgsc123_new/images/thumb/5a/59/5a5946b0f90caff87c89fa9ce82b1449.jpeg">
           </div>
     </div>
+    <footer>
+      <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
+      <img src="https://avatars.mds.yandex.net/i?id=f961f2cb56deda5e9fdbab826eb2da3333245191-8209628-images-thumbs&n=13">
+      <p>адресс:Волгоградская обл, Волгоград г, Кузнецкая ул, дом № 28</p>
+      <p>все права защищены</p>
+      <h5>ooooo</h5>
+  </footer>    
 </body>
 </html>
