--- a/teacher.html
+++ b/teacher.html
@@ -50,6 +50,13 @@
                 <p>exbntkm utjuhhabb</p>
                 <button><a href="verpav.html">Подробнее</a></button>
               </div>
-    </div>   
+    </div> 
+    <footer>
+        <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
+        <img src="https://avatars.mds.yandex.net/i?id=f961f2cb56deda5e9fdbab826eb2da3333245191-8209628-images-thumbs&n=13">
+        <p>адресс:Волгоградская обл, Волгоград г, Кузнецкая ул, дом № 28</p>
+        <p>все права защищены</p>
+        <h5>ooooo</h5>
+    </footer>   
 </body>
 </html>
