--- a/index.html
+++ b/index.html
@@ -113,7 +113,14 @@
         </div>
     </div>
     <button id="prev">Назад</button>
-    <button id="next">Вперед</button>         
+    <button id="next">Вперед</button>
+<footer>
+    <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
+    <img src="https://avatars.mds.yandex.net/i?id=f961f2cb56deda5e9fdbab826eb2da3333245191-8209628-images-thumbs&n=13">
+    <p>адресс:Волгоградская обл, Волгоград г, Кузнецкая ул, дом № 28</p>
+    <p>все права защищены</p>
+    <h5>ooooo</h5>
+</footer>        
  </body>
   </html>
 
