--- a/mixvas.html
+++ b/mixvas.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МОУ СШ №123</title>
-    <link rel="stylesheet" href="./css8/main_888.css" href="./css8/main_10.css">
+    <link rel="stylesheet" href="./css8/main_888.css">
+    <link rel="stylesheet" href="./css8/main_10.css">
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
@@ -47,6 +48,12 @@
             </div>
         </div>
     </div>
-    
+    <footer>
+        <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
+        <img src="https://avatars.mds.yandex.net/i?id=f961f2cb56deda5e9fdbab826eb2da3333245191-8209628-images-thumbs&n=13">
+        <p>адресс:Волгоградская обл, Волгоград г, Кузнецкая ул, дом № 28</p>
+        <p>все права защищены</p>
+        <h5>ooooo</h5>
+    </footer>     
 </body>
 </html>
