--- a/teacher.html
+++ b/teacher.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МОУ СШ №123</title>
-    <link rel="stylesheet" href="./css3/main_3.css">
+    <link rel="stylesheet" href="./css228/teach.css">
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
@@ -26,28 +26,28 @@
                         </a></li>
                 </ul>
             </nav>
-            <img src="foto-2.png" alt="" width="180px" height="180px">
+        </header>    
             <div class="logo">
+                <img src="foto-2.png" alt="" width="150px" height="150px">
                 <p style="font-size: 24px;">МОУ СШ №123</p>
             </div>
-        </header>
         <div class="card-container">
             <div class="card">
               <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
-              <h3>Mixvasik</h3>
-              <p>№1</p>
+              <h3>Полянский Михаил Васильевич</h3>
+              <p>Директор, учитель физики</p>
               <button><a href="mixvas.html">Подробнее</a></button>
             </div>
             <div class="card">
                 <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
-                <h3>vv</h3>
-                <p>eeeeeeee</p>
+                <h3>Кутнюк Виктория Викторовна</h3>
+                <p>Зам по воспитательным работам, учитель химии</p>
                 <button><a href="viktvikt.html">Подробнее</a></button>
               </div>
               <div class="card">
                 <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
-                <h3>Veronichka</h3>
-                <p>exbntkm utjuhhabb</p>
+                <h3>Вероника Павловна</h3>
+                <p>зам по воспитательным работам, учитель географии</p>
                 <button><a href="verpav.html">Подробнее</a></button>
               </div>
     </div> 
