--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МОУ СШ №123</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css228/main.css">
     <link rel="icon" href="foto-2.png">
+    <script src="script.js"></script>
 </head>
-<body>
-    <label class="logot-nan" for="checkbox">
-        <input type="checkbox" id="checkbox" />
-        <div class="slider"></div>
-    </label>
-
-<script src="script.js"></script>
 
 <body>
-    <div class="wapper">
+    <div class="fon">
         <header class="content">
             <nav>
                 <ul>
@@ -34,12 +28,17 @@
                         </a></li>
                 </ul>
             </nav>
-            <img src="foto-2.png" alt="" width="180px" height="180px">
-            <div class="logo">
-                <p style="font-size: 24px;">МОУ СШ №123</p>
-            </div>
         </header>
-
+            
+            <div class="logo">
+                <img src="foto-2.png" alt="" width="150px" height="150px">
+                <div class="govno">
+                <h3><span>МОУ СШ №123</span></h3>
+                </div>
+            </div>
+    </div>
+        
+    <div class="wapper">
         <div class="main_page">
             <div class="school_photo">
                 <img src="https://avatars.mds.yandex.net/i?id=d5b07d3090608376924cfed4bb49a9c6f27738a4-10814639-images-thumbs&n=13">
@@ -65,30 +64,25 @@
             </div>
         </div>
     </div>
+
         <div class="aktivnosti">
             <div class="aktiv">
-                <img src="oke.jpg"><img src="oke1.jpg">
-            </div>
-            <h1>Движения</h1>
-            <p>Информация</p>
-            <img src="https://avatars.mds.yandex.net/i?id=da982dd31e949d32799caf2f2a9035c611764e54-5206345-images-thumbs&n=13">
-
+                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+            </div>    
         </div>
     <div class="knopka">
         <button><a href="achievements.html">Достижения школы</a></button>
     </div>
-    <div class="histori">
-        <div class="histori-oke">
-            <details>
-                <summary>О нашей школе</summary>
-                    <h3>1 сентября 2023 года в Волгограде открылась новая школа - МОУ СШ №123</h3>
-                    <h3>Школа отвечает всем требованиям к образовательному процессу и создает комфортные условия для обучения и развития детей</li>
-                    <h3>Так же школа оснащена всем необходтмым обуродованием для проведения уроков и доп.занятий</h3>
-                    <h3>Педогагический коллектив состоит из опытных и квалифицированых учителей, а так же молодых и амбициозных педагогов</h3>
-                    <h3>Педагоги создают благоприятную атмосферу для обучения и воспитания подрастающего поколения</h3>
-            </details>
-    </div>
-        <button><a href="https://vk.com/school123vlg">наш вк<img src="znak.png"></a></button>
+    <div class="hi">
+        <div class="hihi">
+            <h1>Немного о нашей школе</h1>
+            <p>1 сентября 2023 года в Волгограде открылась новая школа - МОУ СШ №123
+                Школа отвечает всем требованиям к образовательному процессу и создает комфортные условия для обучения и развития детей
+                Так же школа оснащена всем необходтмым обуродованием для проведения уроков и доп.занятий
+                Педогагический коллектив состоит из опытных и квалифицированых учителей, а так же молодых и амбициозных педагогов
+                Педагоги создают благоприятную атмосферу для обучения и воспитания подрастающего поколения</p>
+            <button><a href="https://vk.com/school123vlg">наш вк<img src="znak.png"></a></button>    
+        </div>
     </div>
     <div class="mesto">
         <div class="me">
@@ -99,21 +93,13 @@
     <div class="okeoke">
         <div class="pon">
             <h1>Остались вопросы? Немедленно спросите у нас</h1>
-            <p>Введите сообшение<input type="text"></p>
-            <p>Введите ваш адрес электронной почты<input type="email"></p>
+            <label for="text">Введите сообщение</label>
+            <input type="text">
+            <label for="email">Введите адрес электронной почты</label>
+            <input type="email">
             <input type="submit">
         </div>
     </div>
-    <div id="slider">
-        <div id="items">
-            <img src="https://s.0532.ua/section/newsIcon/upload/images/news/icon/000/034/596/1-0130_5b194acf04f1f.jpg" />
-            <img src="https://images.prismic.io/zalando-jobsite/95a8794954c6b36dc6cf6c9f5a9994be7f47575d_stocksnap_6yechnhrsw.jpg?auto=compress,format" />
-            <img src="https://mp3party.net/system/boxes/imgs/000/000/369/large/large_thumb-wz2opf.png" />
-            <img src="https://sfera.az/file/pic/xeber/2019-09/1569402140_1546350277_hava-yagmursuz.jpg" />
-        </div>
-    </div>
-    <button id="prev">Назад</button>
-    <button id="next">Вперед</button>
 <footer>
     <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
     <img src="https://avatars.mds.yandex.net/i?id=f961f2cb56deda5e9fdbab826eb2da3333245191-8209628-images-thumbs&n=13">
