#####, недосып, ужас, грусть, стена

--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="wapper">
+    <div class="fon">
         <header class="content">
             <nav>
                 <ul>
@@ -27,32 +27,28 @@
                         </a></li>
                 </ul>
             </nav>
-            <img src="foto-2.png" alt="" width="180px" height="180px">
-            <div class="logo">
-                <p style="font-size: 24px;">МОУ СШ №123</p>
+            <div class="govno">
+                <img src="foto-2.png" alt="" width="150px" height="150px">
+                <h2 style="font-size: 24px;"><span>МОУ СШ №123</span></h2>
             </div>
         </header>
-
+    </div>
+    <div class="wapper">
     <div class="text">
         <div class="obrashenie">
-            <h1>Контакты</h1>
             <h3>Учреждение: муниципальное общеобразовательное учреждение "Средняя школа № 123 Ворошиловского района Волгограда"</h3>
         </div>
     </div>
     <div class="info">
         <div class="contacts">
-            <p>Сокращенное наименование образовательной организаци:</p>
-            <p>Адрес местонахождения образовательной организации:</p>
-            <p>Телефон образовательной организации:</p>
-            <p>Адрес электронной почты образовательной организации:</p>
-        </div>
-        <div class="otvet">
-            <p>МОУ СШ № 123</p>
-            <p>400120  город Волгоград,Волгоградская обл,улица Кузнецкая дом № 28</p>
-            <p>+7(8442)334-123, +7(8442)335-123</p>
-            <p>school123@volgadmin.ru</p>
+            <p>Сокращенное наименование образовательной организаци:МОУ СШ № 123</p>
+            <p>Адрес местонахождения образовательной организации:400120  город Волгоград,Волгоградская обл,улица Кузнецкая дом № 28</p>
+            <p>Телефон образовательной организации:+7(8442)334-123, +7(8442)335-123</p>
+            <p>Адрес электронной почты образовательной организации:school123@volgadmin.ru</p>
         </div>
     </div>
+
+    
 </div>
 <footer>
     <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
@@ -60,6 +56,6 @@
     <p>адресс:Волгоградская обл, Волгоград г, Кузнецкая ул, дом № 28</p>
     <p>все права защищены</p>
     <h5>ooooo</h5>
-</footer>  
+</footer> 
 </body>
 </html>
