--- a/job.html
+++ b/job.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
-    <div class="wapper">
+    <div class="fon">
         <header class="content">
             <nav>
                 <ul>
@@ -26,11 +26,13 @@
                         </a></li>
                 </ul>
             </nav>
-            <img src="foto-2.png" alt="" width="180px" height="180px">
-            <div class="logo">
-                <p style="font-size: 24px;">МОУ СШ №123</p>
+            <div class="govno">
+                <img src="foto-2.png" alt="" width="150px" height="150px">
+                <h3 style="font-size: 24px;"><span>МОУ СШ №123</span></h3>
             </div>
         </header>
+    </div>
+    <div class="wapper">
         <div class="foto">
             <img src="https://123.volgogradschool.ru/upload/volgsc123_new/images/banner/51/7d/517dd061b6228b904c0f4157c742bc21.jpeg">
         </div>    
