--- a/verpav.html
+++ b/verpav.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>МОУ СШ №123</title>
+    <link rel="stylesheet" href="./css228/shablo2.css">
+    <link rel="stylesheet" href="./css228/verpav.css">
+    <link rel="icon" href="foto-2.png">
 </head>
 <body>
-    
+    <div class="fon">
+        <header class="content">
+            <nav>
+                <ul>
+                    <li><a href="index.html">
+                            <p style="font-size: 20px;">Главная</p>
+                        </a></li>
+                    <li class="active"><a href="teacher.html">
+                            <p style="font-size: 20px;">Преподаватели</p>
+                        </a></li>
+                    <li><a href="job.html">
+                            <p style="font-size: 20px;">Вакансии</p>
+                        </a></li>
+                    <li><a href="contacts.html">
+                            <p style="font-size: 20px;"> Контакты</p>
+                        </a></li>
+                </ul>
+            </nav>
+            <div class="govno">
+                <img src="foto-2.png" alt="" width="150px" height="150px">
+                <h3 style="font-size: 24px;"><span>МОУ СШ №123</span></h3>
+            </div>
+        </header>
+    </div>
+    <div class="wapper">
+        <div class="info">
+            <div class="info-foto">
+                <img src="https://123.volgogradschool.ru/upload/volgsc123_new/images/person/d5/ba/d5ba20265ec8e5cdaa20d0e76525f431.png">
+                <h1>Комарова Вероника Павловна</h1>
+                <h3>Зам директора по воспитательным работам, уитель географии</h3>
+            </div>
+            <div class="podrobno">
+                <div class="okeoke">
+                    <p>Преподаваемые учебные предметы, курсы, дисциплины (модули):География</p>
+                    <p>Уровень образования:Высшее</p>
+                    <p>Наименование направления подготовки и (или) специальности:ВГСПУ магистр естественнонайчного образования, 01.09.2005-01.07.2007</p>
+                    <p>Данные о повышении квалификации: "Педагогические компетенции Педагогического образования. Организация системной педагогической работы с обучающимися с ОВЗ", 13.01.2022-30.01.2022;</p>
+                    <p>"Формирование и оценка функциональной грамотности учащихся", 20.01.2022-26.01.2022;</p>
+                    <p>"Содержание и методика преподавания курса финансовой грамотности различным категориям обучающихся", 18.02.2020-18.01.2021</p>
+                    <p>Сведения о продолжительности опыта (лет) работы в профессиональной сфере:27 год</p>
+                    <p>реализуемые образовательные программы: Образовательная программа среднего общего образования, образовательная программа основного общего образования</p>
+                </div>
+            </div>
+            <div class="iii">
+                <p>oooooooo</p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
+        <img src="https://avatars.mds.yandex.net/i?id=f961f2cb56deda5e9fdbab826eb2da3333245191-8209628-images-thumbs&n=13">
+        <p>адресс:Волгоградская обл, Волгоград г, Кузнецкая ул, дом № 28</p>
+        <p>все права защищены</p>
+        <h5>ooooo</h5>
+    </footer>     
 </body>
 </html>
