--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
                         </a></li>
                 </ul>
             </nav>
-        </header>
             
-            <div class="logo">
+            <div class="govno">
                 <img src="foto-2.png" alt="" width="150px" height="150px">
-                <div class="govno">
-                <h3><span>МОУ СШ №123</span></h3>
-                </div>
+                <h2><span>МОУ СШ №123</span></h2>
             </div>
+        </header>
     </div>
         
     <div class="wapper">
@@ -90,14 +88,27 @@
             <button><a href="telephone.html">Телефон доверия</a></button>
         </div>
     </div>
-    <div class="okeoke">
-        <div class="pon">
-            <h1>Остались вопросы? Немедленно спросите у нас</h1>
-            <label for="text">Введите сообщение</label>
-            <input type="text">
-            <label for="email">Введите адрес электронной почты</label>
-            <input type="email">
-            <input type="submit">
+    <div class="wapper">
+        <div class="rrr">
+            <div class="feedback-form-container">
+                <h3>Обратная связь</h3>
+                <p>Задайте вопрос или опишите свою проблему.</p>
+                <form id="feedback-form">
+                <div class="form-group">
+                    <label for="name">Имя:</label>
+                    <input type="text" id="name" name="name" required placeholder="Ваше имя">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required placeholder="Ваш email">
+                </div>
+                <div class="form-group">
+                    <label for="message">Сообщение:</label>
+                    <textarea id="message" name="message" rows="5" required placeholder="Опишите подробно свой вопрос или проблему"></textarea>
+                </div>
+                <button type="submit">Отправить сообщение</button>
+                </form>
+            </div>
         </div>
     </div>
 <footer>
