--- a/mixvas.html
+++ b/mixvas.html
@@ -9,14 +9,14 @@
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
-    <div class="wapper">
+    <div class="fon">
         <header class="content">
             <nav>
                 <ul>
                     <li><a href="index.html">
                             <p style="font-size: 20px;">Главная</p>
                         </a></li>
-                    <li class="active"><a href="#">
+                    <li class="active"><a href="teacher.html">
                             <p style="font-size: 20px;">Преподаватели</p>
                         </a></li>
                     <li><a href="job.html">
@@ -27,24 +27,29 @@
                         </a></li>
                 </ul>
             </nav>
-            <img src="foto-2.png" alt="" width="180px" height="180px">
-            <div class="logo">
-                <p style="font-size: 24px;">МОУ СШ №123</p>
+            <div class="govno">
+                <img src="foto-2.png" alt="" width="150px" height="150px">
+                <h3 style="font-size: 24px;"><span>МОУ СШ №123</span></h3>
             </div>
         </header>
+    </div>
+    <div class="wapper">
         <div class="info">
             <div class="info-foto">
                 <img src="https://123.volgogradschool.ru/upload/volgsc123_new/images/person/d5/ba/d5ba20265ec8e5cdaa20d0e76525f431.png">
                 <h1>Полянский Михаил Васильевич</h1>
                 <h3>Директор</h3>
             </div>
-        </div>
-        <div class="podrobno">
-            <div class="okeoke">
-                <p>Преподаваемые учебные предметы, курсы, дисциплины (модули)</p><p>Физика</p>
-                <p>Уровень образования</p><p>Высшее</p>
-                <p>Наименование направления подготовки и (или) специальности</p><p>ГОУ ВПО ВГСПУ, учитель физики и учитель информатики</p>
-                <p>Сведения о продолжительности опыта (лет) работы в профессиональной сфере</p><p>21 год</p>
+            <div class="podrobno">
+                <div class="okeoke">
+                    <p>Преподаваемые учебные предметы, курсы, дисциплины (модули):Физика</p>
+                    <p>Уровень образования:Высшее</p>
+                    <p>Наименование направления подготовки и (или) специальности:ГОУ ВПО ВГСПУ, учитель физики и учитель информатики</p>
+                    <p>Сведения о продолжительности опыта (лет) работы в профессиональной сфере:21 год</p>
+                </div>
+            </div>
+            <div class="iii">
+                <p>oooooooo</p>
             </div>
         </div>
     </div>
