--- a/teacher.html
+++ b/teacher.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
-    <div class="wapper">
+    <div class="wap">
         <header class="content">
             <nav>
                 <ul>
@@ -26,11 +26,14 @@
                         </a></li>
                 </ul>
             </nav>
-        </header>    
-            <div class="logo">
+           
+            <div class="govno">
                 <img src="foto-2.png" alt="" width="150px" height="150px">
-                <p style="font-size: 24px;">МОУ СШ №123</p>
+                <h3 style="font-size: 24px;"><span>МОУ СШ №123</span></h3>
             </div>
+        </header>
+    </div>
+    <div class="wapper">
         <div class="card-container">
             <div class="card">
               <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
@@ -41,13 +44,13 @@
             <div class="card">
                 <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
                 <h3>Кутнюк Виктория Викторовна</h3>
-                <p>Зам по воспитательным работам, учитель химии</p>
+                <p>Зам дируктора по воспитательным работам, учитель химии</p>
                 <button><a href="viktvikt.html">Подробнее</a></button>
               </div>
               <div class="card">
                 <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
-                <h3>Вероника Павловна</h3>
-                <p>зам по воспитательным работам, учитель географии</p>
+                <h3>Комарова Вероника Павловна</h3>
+                <p>Зам директора  по воспитательным работам, учитель географии</p>
                 <button><a href="verpav.html">Подробнее</a></button>
               </div>
     </div> 
