--- a/viktvikt.html
+++ b/viktvikt.html
@@ -3,8 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>МОУ СШ №123</title>
+    <link rel="stylesheet" href="./css228/shablo2.css">
+    <link rel="stylesheet" href="./css228/vikvik.css">
+    <link rel="icon" href="foto-2.png">
 </head>
 <body>
+    <div class="fon">
+        <header class="content">
+            <nav>
+                <ul>
+                    <li><a href="index.html">
+                            <p style="font-size: 20px;">Главная</p>
+                        </a></li>
+                    <li class="active"><a href="teacher.html">
+                            <p style="font-size: 20px;">Преподаватели</p>
+                        </a></li>
+                    <li><a href="job.html">
+                            <p style="font-size: 20px;">Вакансии</p>
+                        </a></li>
+                    <li><a href="contacts.html">
+                            <p style="font-size: 20px;"> Контакты</p>
+                        </a></li>
+                </ul>
+            </nav>
+            <div class="govno">
+                <img src="foto-2.png" alt="" width="150px" height="150px">
+                <h3 style="font-size: 24px;"><span>МОУ СШ №123</span></h3>
+            </div>
+        </header>
+    </div>
+    <div class="wapper">
+        <div class="info">
+            <div class="info-foto">
+                <img src="https://123.volgogradschool.ru/upload/volgsc123_new/images/person/d5/ba/d5ba20265ec8e5cdaa20d0e76525f431.png">
+                <h1>Кутнюк Виктория Викторовна</h1>
+                <h3>Зам директора по воспитательным работам, учитель химии</h3>
+            </div>
+            <div class="podrobno">
+                <div class="okeoke">
+                    <p>Преподаваемые учебные предметы, курсы, дисциплины (модули):Биология, Химия</p>
+                    <p>Уровень образования:Высшее</p>
+                    <p>Наименование направления подготовки и (или) специальности:учитель химии и биологии по специальности "химия" Волгоградский Государственный Педагогический Университет, дата окончания-01.07.2000</p>
+                    <p>Даннае о повышении квалификации: ГАУДПО "ВГАПО" подготовка экспертов муниципальной предметной комиссии для проведения государственной итоговой аттестации по образовательным программам основного общего образования (химия) с учетом требований обновленных ФГОС ООО, 30.03.2022-17.03.2023</p>
+                    <p>Сведения о продолжительности опыта (лет) работы в профессиональной сфере:22 год</p>
+                    <P>Реализуемые образовательные программы: Образовательная программа среднего общего образования, обрательная прорамма основного общего образования</P>
+                </div>
+            </div>
+            <div class="iii">
+                <p>oooooooo</p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
+        <img src="https://avatars.mds.yandex.net/i?id=f961f2cb56deda5e9fdbab826eb2da3333245191-8209628-images-thumbs&n=13">
+        <p>адресс:Волгоградская обл, Волгоград г, Кузнецкая ул, дом № 28</p>
+        <p>все права защищены</p>
+        <h5>ooooo</h5>
+    </footer>     
 </body>
 </html>
