Окно, только в окно

--- a/exams.html
+++ b/exams.html
@@ -4,40 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МОУ СШ №123</title>
-    <link rel="stylesheet" href="./css228/shablo.css">
     <link rel="stylesheet" href="./css228/exams.css">
     <link rel="icon" href="foto-2.png">
 </head>
 <body>
     <div class="wapper">
         <header class="content">
+            <button><a href="index.html">Назад</a></button>
+            <h1>Экзамены</h1>
             <nav>
                 <ul>
-                    <li class="active"><a href="index.html">
-                            <p style="font-size: 20px;">Главная</p>
+                    <li class="active"><a href="#">
+                            <p style="font-size: 20px;">График проведения</p>
                         </a></li>
-                    <li><a href="teacher.html">
-                            <p style="font-size: 20px;">Преподаватели</p>
+                    <li><a href="#">
+                            <p style="font-size: 20px;">Как определиться с экзаменом</p>
                         </a></li>
-                    <li><a href="job.html">
-                            <p style="font-size: 20px;">Вакансии</p>
+                    <li><a href="#">
+                            <p style="font-size: 20px;">Как побороть свой стресс</p>
                         </a></li>
-                    <li><a href="contacts.html">
-                            <p style="font-size: 20px;"> Контакты</p>
+                    <li><a href="#">
+                            <p style="font-size: 20px;">Подготовка к экзамену</p>
                         </a></li>
                 </ul>
             </nav>
-            <img src="foto-2.png" alt="" width="180px" height="180px">
-            <div class="logo">
-                <p style="font-size: 24px;">МОУ СШ №123</p>
         </header>
+    
         <div class="opis">
             <div class="nie">
                 <h1> Школьные экзамены: подготовка к ОГЭ и ЕГЭ — успешное будущее начинается здесь!</h1>
-                <img src="">
-                
+                <img src="https://avatars.mds.yandex.net/i?id=9736ab7467fdbfeccc513dbae5366f51c24a5647-5896417-images-thumbs&n=13">
+                <p>Экзамены служат для оценки уровня знаний и навыков в различных областях, от школьной программы до профессиональной сертификации. Здесь собраны сведения о различных типах экзаменов, их структуре, правилах и подготовке.</p>               
+            </div>
+        </div>
+        <div class="info">
+            <div class="tet">
+                <h1>С чего начать подготовку </h1>
+                <p>Сначала разберитесь, зачем вам этот экзамен. Затем оцените, что вы уже знаете (пробный тест покажет пробелы в знаниях). После этого спланируйте, когда и как вы будете готовиться, и подберите необходимые учебники и онлайн-курсы.</p>
+                <h1>Что можно брать с собой на экзамене</h1>
+                <p>На ОГЭ: Биология: линейка, калькулятор; География: линейка, калькулятор, атласы за 7-9 класс; Литература: орфографический словарь, сборники лирики; Математика: линейка; Русский язык: орфографический словарь; Химия: калькулятор</p>
+                <h1>Как подать апелляцию на результаты экзамена</h1>
+                <p>Как подать:
+
+                    Ознакомьтесь с правилами: изучите порядок подачи апелляции для конкретного экзамена. Обычно информация доступна на сайте организатора экзамена.
+                    Подготовьте заявление: напишите заявление, в котором четко укажите причину апелляции (например, несогласие с оценкой конкретного задания, нарушение процедуры экзамена).
+                    Подайте заявление: отправьте заявление в апелляционную комиссию установленным способом (лично, по почте, онлайн — зависит от правил экзамена).
+                    Рассмотрение апелляции: вас могут пригласить на заседание апелляционной комиссии для разъяснения вашей позиции.
+                    Решение комиссии: Комиссия примет решение об удовлетворении апелляции (изменении оценки) или об отказе.</p>
             </div>
         </div>
     </div> 
+<footer>
+    <img src="znak.png"><a href="https://vk.com/school123vlg"></a>
+    <img src="https://avatars.mds.yandex.net/i?id=f961f2cb56deda5e9fdbab826eb2da3333245191-8209628-images-thumbs&n=13">
+    <p>адресс:Волгоградская обл, Волгоград г, Кузнецкая ул, дом № 28</p>
+    <p>все права защищены</p>
+    <h5>ooooo</h5>
+</footer>   
 </body>
 </html>
