--- a/verpav.html
+++ b/verpav.html
@@ -36,7 +36,7 @@
     <div class="wapper">
         <div class="info">
             <div class="info-foto">
-                <img src="https://123.volgogradschool.ru/upload/volgsc123_new/images/person/d5/ba/d5ba20265ec8e5cdaa20d0e76525f431.png">
+                <img src="image.png">
                 <h1>Комарова Вероника Павловна</h1>
                 <h3>Зам директора по воспитательным работам, уитель географии</h3>
             </div>
