отчаяние,депрессия,тильт,окно

--- a/html/job.html
+++ b/html/job.html
@@ -42,7 +42,7 @@
         </div>
         <div class="card-container">
             <div class="card">
-              <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+              <img src="z.png">
               <h3>Заведующий хозяйством</h3>
               <p>1 ставка</p>
             </div>
