--- a/job.html
+++ b/job.html
@@ -47,42 +47,42 @@
               <p>1 ставка</p>
             </div>
             <div class="card">
-              <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+              <img src="t.png">
               <h3>Учитель технологии (для мальчиков)</h3>
               <p>1 ставка</p>
             </div>
             <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="a.png">
                 <h3>Учитель английского языка</h3>
                 <p>2 ставки</p>
               </div>
               <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="f.png">
                 <h3>Учитель физики</h3>
                 <p>0,5 ставка</p>
               </div> 
               <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="m.png">
                 <h3>Учитель математики</h3>
                 <p>0,5 ставка</p>
               </div>
               <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="my.png">
                 <h3>Учитель музыки</h3>
                 <p>1 ставка</p>
               </div>
               <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="b.png">
                 <h3>Библиотекарь</h3>
                 <p>0,5 ставка</p>
               </div>
               <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="b.png">
                 <h3>Педагог библиотекарь</h3>
                 <p>1 ставка</p>
               </div>
               <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="g.png">
                 <h3>Учитель географии</h3>
                 <p>0,5 ставка</p>
               </div>  
