она надеялась, что коммитов не будет,наивно

--- a/teacher.html
+++ b/teacher.html
@@ -36,19 +36,19 @@
     <div class="wapper">
         <div class="card-container">
             <div class="card">
-              <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+              <img src="f.png">
               <h3>Полянский Михаил Васильевич</h3>
               <p>Директор, учитель физики</p>
               <button><a href="mixvas.html">Подробнее</a></button>
             </div>
             <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="h.png">
                 <h3>Кутнюк Виктория Викторовна</h3>
                 <p>Зам дируктора по воспитательным работам, учитель химии</p>
                 <button><a href="viktvikt.html">Подробнее</a></button>
               </div>
               <div class="card">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="g.png">
                 <h3>Комарова Вероника Павловна</h3>
                 <p>Зам директора  по воспитательным работам, учитель географии</p>
                 <button><a href="verpav.html">Подробнее</a></button>
