для зеленых кубиков

--- a/foog.html
+++ b/foog.html
@@ -10,16 +10,19 @@
 <body>
     <div class="wapper">
         <div class="oke">
-            <h1>Школьное питание: меню, качество и забота о здоровье</h1>
-            <h3>Ваш ребенок получит вкусное и сбалансированное питание в нашей школе!</h3>
-            <p>На этой странице вы найдёте всю необходимую информацию о школьном питании: от актуального меню до сведений о качестве продуктов и мерах, принимаемых для обеспечения здоровья и благополучия ваших детей. Мы стремимся предоставлять разнообразное, вкусное и питательное питание, которое поможет школьникам оставаться энергичными, здоровыми и успешными в учёбе.</p>
+            <button><a href="index.html">Вернуться</a></button>
+            <div class="pon">
+                <h1>Школьное питание: меню, качество и забота о здоровье</h1>
+                <h3>Ваш ребенок получит вкусное и сбалансированное питание в нашей школе!</h3>
+                <p>На этой странице вы найдёте всю необходимую информацию о школьном питании: от актуального меню до сведений о качестве продуктов и мерах, принимаемых для обеспечения здоровья и благополучия ваших детей. Мы стремимся предоставлять разнообразное, вкусное и питательное питание, которое поможет школьникам оставаться энергичными, здоровыми и успешными в учёбе.</p>
+            </div>
         </div>
         <div class="new">
             <div class="neew">
                 <h1>Новинка</h1>
                 <img src="Vivo.png">
-                <details>
-                    <summary>Питание 123</summary>
+                <nav>
+                    <ul>
                     
                         <a href="#">Еженедельное питание</a>
                         <a href="#">Фотографии блюд</a>
@@ -27,7 +30,8 @@
                         <a href="#">Состав и пищевая ценность</a>
                         <a href="#">Аллергии и диетические особенности</a>
                         <a href="#">Контакты</a>
-                </details>
+                    </ul>
+                </nav>
             <div class="ik">
                 <img src="https://avatars.mds.yandex.net/i?id=2d70d45fb8cadeb27bc9f7789d187f434174e2e1-11042380-images-thumbs&n=13">
             </div>
