--- a/telephone.html
+++ b/telephone.html
@@ -27,15 +27,14 @@
                         </a></li>
                 </ul>
             </nav>
-            <img src="foto-2.png" alt="" width="180px" height="180px">
+        </header>  
             <div class="logo">
-                <p style="font-size: 24px;">МОУ СШ №123</p>
-        </header>
+                <img src="https://cdn.culture.ru/images/fd784d42-f689-597c-b21f-dbe58a51b432">
+                <h1>Единный телефон доверия</h1>
+            </div>
         
         <div class="info">
             <div class="info_ok">
-                <img src="https://cdn.culture.ru/images/fd784d42-f689-597c-b21f-dbe58a51b432">
-                <h2>Единый телефон доверия</h2>
                 <p>Единый Телефон Доверия для детей, подростков и их родителей оказывает консультативно психологическую помощь детям и родителям с целью укрепления семьи, профилактики семейного неблагополучия, стрессовых и эмоциональных настроений детей и подростков, защиты прав детей. 
 
                     Сотрудники службы Телефона Доверия окажут эмоциональную поддержку и помощь родителям в нахождении способов психологической помощи детям, пережившим травмирующее событие, и в восстановлении повседневной жизни семьи и образовательного процесса.</p>
