--- a/exams.html
+++ b/exams.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wapper">
         <header class="content">
-            <button><a href="index.html">Назад</a></button>
+            <button><a href="index.html">Вернуться</a></button>
             <h1>Экзамены</h1>
             <nav>
                 <ul>
