Дмитрий,желаю удачи что-то понять

--- a/exams.html
+++ b/exams.html
@@ -33,8 +33,10 @@
         <div class="opis">
             <div class="nie">
                 <h1> Школьные экзамены: подготовка к ОГЭ и ЕГЭ — успешное будущее начинается здесь!</h1>
-                <img src="https://avatars.mds.yandex.net/i?id=9736ab7467fdbfeccc513dbae5366f51c24a5647-5896417-images-thumbs&n=13">
-                <p>Экзамены служат для оценки уровня знаний и навыков в различных областях, от школьной программы до профессиональной сертификации. Здесь собраны сведения о различных типах экзаменов, их структуре, правилах и подготовке.</p>               
+                <p>Экзамены служат для оценки уровня знаний и навыков в различных областях,</p>
+                <p> от школьной программы до профессиональной сертификации. Здесь собраны сведения</p>
+                <p>о различных типах экзаменов, их структуре, правилах и подготовке.</p>               
+                <img src="https://avatars.mds.yandex.net/i?id=9736ab7467fdbfeccc513dbae5366f51c24a5647-5896417-images-thumbs&n=13">              
             </div>
         </div>
         <div class="info">
