--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="aktivnosti">
             <div class="aktiv">
-                <img src="https://avatars.mds.yandex.net/i?id=2da02d49513dc4320b6998b26c5d895d5bada386-8906189-images-thumbs&n=13">
+                <img src="pervi.png">
             </div>    
         </div>
     <div class="knopka">
